# jopaper

./: .env  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/otel-collector/: config.yml
config/prometheus/: config.yml
jopaper/: __main__.py  api.py  generator.py  generator_service.py  layout.py  reactor.py  storage.py  tracing.py
jopaper/static/: index.html
joypaper/: __init__.py  __main__.py  api.py  generator.py  generator_service.py  storage.py
joypaper/static/: index.html
test/: test_e2e.py
